--- a/book/math_foundations/lineaire_regressie/gradient.ipynb
+++ b/book/math_foundations/lineaire_regressie/gradient.ipynb
@@ -5,7 +5,7 @@
    "id": "b2adf5d2",
    "metadata": {},
    "source": [
-    "# $SSE$ _Gradient_\n",
+    "# $SSE$ gradiënt\n",
     "\n",
     "In deze sectie concentreren we ons eerst op de $SSE$ functie in het (triviale) geval dat we een linear regressiemodel hebben met enkel een _intercept_ ($\\pmb{b} = [b_1]^T$). We krijgen dan een U-vormige curve te zien zoals hieronder afgebeeld. Pas in tweede instantie kijken we naar modellen met één of meerdere _predictoren_ $\\pmb{b} = [b_1, b_2, \\ldots]^T$.\n",
     "\n",
@@ -173,7 +173,7 @@
    "id": "9b67ba9f",
    "metadata": {},
    "source": [
-    "## _Gradient_ van de $SSE$ met $\\pmb{b} = [b_1, b_2]^T$\n",
+    "## Gradiënt van de $SSE$ met $\\pmb{b} = [b_1, b_2]^T$\n",
     "\n",
     "In het geval van $\\pmb{b} = [b_1, b_2]^T$ neemt de $SSE$ de vorm aan van een oppervlakte (zoals reeds geïllustreerd bij de grid search en monte carlo sampling). We drukken de afgeleide dan ook uit in twee dimensies:\n",
     "\n",
@@ -184,9 +184,9 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "De elementen $\\frac{\\partial SSE}{\\partial b_1}$ en $\\frac{\\partial SSE}{\\partial b_2}$ worden de **partiële afgeleides** van de $SSE$ functie genoemd. Samen vormen ze de **_gradient_** van de $SSE$ functie $\\nabla{SSE}$. **De _gradient_ verbreedt met andere woorden het concept van de _afgeleide_ naar het geval van meerdere onbekenden.**\n",
+    "De elementen $\\frac{\\partial SSE}{\\partial b_1}$ en $\\frac{\\partial SSE}{\\partial b_2}$ worden de **partiële afgeleiden** van de $SSE$ functie genoemd. Samen vormen ze de **gradiënt** van de $SSE$ functie $\\nabla{SSE}$. **De gradiënt verbreedt met andere woorden het concept van de _afgeleide_ naar het geval van meerdere onbekenden.**\n",
     "\n",
-    "Om een ideale oplossing voor $[b_1, b_2]^T$ te vinden, kunnen we dus de $SSE$ gradient gelijk stellen aan $\\pmb{0}$:\n",
+    "Om een ideale oplossing voor $[b_1, b_2]^T$ te vinden, kunnen we dus de $SSE$ gradiënt gelijk stellen aan $\\pmb{0}$:\n",
     "\n",
     "$$\n",
     "\\nabla{SSE} = \\pmb{0} = \\begin{bmatrix}\n",
@@ -463,9 +463,9 @@
    "id": "73325a1e",
    "metadata": {},
    "source": [
-    "## _Gradient_ van de $SSE$ met $\\pmb{b} = [b_1, b_2, ...]^T$\n",
+    "## Gradiënt van de $SSE$ met $\\pmb{b} = [b_1, b_2, ...]^T$\n",
     "\n",
-    "In het algemene geval van een $SSE$ met $N$ lineaire predictoren hebben we te maken met een $N$-dimensioneel $SSE$ _hypersurface_. Voor de gradient krijgen we:\n",
+    "In het algemene geval van een $SSE$ met $N$ lineaire predictoren hebben we te maken met een $N$-dimensioneel $SSE$ _hypersurface_. Voor de gradiënt krijgen we:\n",
     "\n",
     "$$\n",
     "\\nabla{SSE} = \\begin{bmatrix}\n",
