--- a/book/math_foundations/lineaire_regressie/gradient_descent.ipynb
+++ b/book/math_foundations/lineaire_regressie/gradient_descent.ipynb
@@ -12,10 +12,10 @@
                 "- **_Monte Carlo sampling_**: Hier leveren we ons over aan het _willekeurig aftasten_ van de $SSE$ functie. Dit levert zelfs bij simpele modellen geen stabiele resultaten op.\n",
                 "- **_Ordinary least squares_** (_OLS_): Deze puur analytische oplossing kan in één keer een optimale oplossing opleveren (in de _least squares_ zin), maar kan onstabiele resultaten opleveren wanneer er sprake is van multicollineariteit.\n",
                 "\n",
-                "In deze sectie bespreken we een populair alternatief: **_gradient descent_**. Zeker in de context van complexere ML modellen (bv. neurale netwerken) biedt deze oplossing (en aanverwanten) een stabieler alternatief. Zoals de naam zelf suggereert, maakt de _gradient descent_ oplossing, net zoals OLS gebruik van de gradient. Het is echter net zoals bij Monte Carlo sampling een iteratief, en dus geen _closed form_, leeralgoritme.\n",
+                "In deze sectie bespreken we een populair alternatief: **_gradient descent_**. Zeker in de context van complexere ML modellen (bv. neurale netwerken) biedt deze oplossing (en aanverwanten) een stabieler alternatief. Zoals de naam zelf suggereert, maakt de _gradient descent_ oplossing, net zoals OLS gebruik van de gradiënt. Het is echter net zoals bij Monte Carlo sampling een iteratief, en dus geen _closed form_, leeralgoritme.\n",
                 "\n",
-                ":::{important} Gradient\n",
-                "Herinner je dat de **gradient** in deze context de **tensor is met alle partiële afgeleiden van de _loss_ functie bij een gegeven set van parameterwaarden** $\\nabla J(\\pmb{b}^k)$. Ieder individueel element staat voor de richting van de raaklijn met de _loss_ (hyper) _surface_ voor een bepaalde parameter ($b^k_i$), in de veronderstelling dat alle andere parameters constant blijven (de partiële afgeleide: $\\frac{\\partial J(\\pmb{b}^k)}{\\partial b^k_i}$).\n",
+                ":::{important} Gradiënt\n",
+                "Herinner je dat de **gradiënt** in deze context de **tensor is met alle partiële afgeleiden van de _loss_ functie bij een gegeven set van parameterwaarden** $\\nabla J(\\pmb{b}^k)$. Ieder individueel element staat voor de richting van de raaklijn met de _loss_ (hyper) _surface_ voor een bepaalde parameter ($b^k_i$), in de veronderstelling dat alle andere parameters constant blijven (de partiële afgeleide: $\\frac{\\partial J(\\pmb{b}^k)}{\\partial b^k_i}$).\n",
                 "  \n",
                 "De grootte van de individuele elementen geeft aan hoe sterk de _loss_ functie toeneemt (bij een positieve waarde) of afneemt (bij een negatieve waarde) als de overeenkomstige parameterwaarde ($b^k_i$) met een bepaalde stapgrootte wordt verschoven. Let wel dat het de toe-/afname betreft volgens de lokale lineaire benadering (vandaar geen $=$ maar $\\sim$ hieronder): \n",
                 "\n",
@@ -30,7 +30,7 @@
                 "$$\n",
                 ":::\n",
                 "\n",
-                "Bij _gradient descent_ is het basisidee dat we, zoals bij de Monte Carlo benadering, iteratief parameterwaarden aanpassen in de richting waarin de _loss_ daalt. Alleen laten we dit nu niet afhangen van een random zoektocht, maar gebruiken we de gradient om ons te leiden. We beginnen met een initiële schatting $\\pmb{b}_0$. Daarna gaan we die schatting iteratief updaten met de volgende regel:\n",
+                "Bij _gradient descent_ is het basisidee dat we, zoals bij de Monte Carlo benadering, iteratief parameterwaarden aanpassen in de richting waarin de _loss_ daalt. Alleen laten we dit nu niet afhangen van een random zoektocht, maar gebruiken we de gradiënt om ons te leiden. We beginnen met een initiële schatting $\\pmb{b}_0$. Daarna gaan we die schatting iteratief updaten met de volgende regel:\n",
                 "\n",
                 "$$\n",
                 "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla J(\\pmb{b}^k) \n",
@@ -39,7 +39,7 @@
                 "  \n",
                 "Met andere woorden:\n",
                 "- **bij iedere update, verschuiven we _alle_ parameterwaarden in de richting van de sterkste daling van de _loss_ functie**\n",
-                "- **de grootte van de update wordt bepaald als een fractie van de gradient (of de individuele partiële afgeleiden), gecontroleerd door de _learning rate_ $\\lambda$**\n",
+                "- **de grootte van de update wordt bepaald als een fractie van de gradiënt (of de individuele partiële afgeleiden), gecontroleerd door de _learning rate_ $\\lambda$**\n",
                 "\n",
                 "Het algoritme maakt ten slotte ook gebruik van een **_stopping rule_** om te bepalen wanneer de winst qua daling in the _loss_ klein genoeg is geworden om de iteraties stop te zetten.\n",
                 "\n",
@@ -111,7 +111,13 @@
                     "name": "stdout",
                     "output_type": "stream",
                     "text": [
-                        "Initial SSE loss: 183.42 (with guess: 0.73 + -0.78 × order)\n",
+                        "Initial SSE loss: 183.42 (with guess: 0.73 + -0.78 × order)\n"
+                    ]
+                },
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
                         "Converged.\n",
                         "Performed 8697 iterations.\n",
                         "Estimated parameters (Standardized): b1 = $0.00, b2 = 0.97\n",
@@ -3868,13 +3874,13 @@
                 "## Nadelen\n",
                 "- De startpositie (initiële parameterschattingen) kan een grote invloed hebben op de snelheid van convergentie.\n",
                 "- Learning rate en convergentieregel moeten doordacht gekozen worden:\n",
-                "    - Een te grote learning rate kan ervoor zorgen dat er _overshooting_ is van de target (_loss_ gradient $\\pmb{0}$).\n",
+                "    - Een te grote learning rate kan ervoor zorgen dat er _overshooting_ is van de target (_loss_ gradiënt $\\pmb{0}$).\n",
                 "    - Een stop-regel die niet streng genoeg is, leidt automatisch tot een inaccuraat resultaat.\n",
                 "- Kan traag zijn/veel geheugen vragen bij grote datasets.\n",
                 "- Het algoritme kan vast komen te zitten in **lokale minima**.\n",
                 "\n",
                 "### Lokale minima\n",
-                "Bij complexere modellen bestaat het risico op _hyper loss surfaces_ die locaties bevatten waar de gradient $0$ is, met rondom hogere _loss_ waarden, maar waar die **locaties niet overeenkomen met het echte minimum van de _loss_ functie**. Het gradient descent algoritme kan hierin terechtkomen en zijn stop-condities bereiken zonder te weten dat het zich in een lokaal minimum bevindt."
+                "Bij complexere modellen bestaat het risico op _hyper loss surfaces_ die locaties bevatten waar de gradiënt $0$ is, met rondom hogere _loss_ waarden, maar waar die **locaties niet overeenkomen met het echte minimum van de _loss_ functie**. Het gradient descent algoritme kan hierin terechtkomen en zijn stop-condities bereiken zonder te weten dat het zich in een lokaal minimum bevindt."
             ]
         },
         {
@@ -4793,7 +4799,7 @@
                 "\n",
                 "## Stochastische _gradient descent_\n",
                 "\n",
-                "Bij **stochastische _gradient descent_** (SGD) passen we de _gradient descent_ methode aan door **niet de volledige dataset te gebruiken bij elke iteratie, maar slechts een sample** (soms zelfs slechts één observatie). Dit betekent dat we de gradient niet berekenen op basis van alle data punten, maar op basis van een (kleine) willekeurig gekozen subset.\n",
+                "Bij **stochastische _gradient descent_** (SGD) passen we de _gradient descent_ methode aan door **niet de volledige dataset te gebruiken bij elke iteratie, maar slechts een sample** (soms zelfs slechts één observatie). Dit betekent dat we de gradiënt niet berekenen op basis van alle data punten, maar op basis van een (kleine) willekeurig gekozen subset.\n",
                 "\n",
                 "De update regel wordt dan:\n",
                 "\n",
@@ -4805,7 +4811,7 @@
                 "\n",
                 "### Voordelen van SGD\n",
                 "- Sneller bij grote datasets: Door niet alle observaties te gebruiken bij elke update, is SGD veel sneller dan reguliere _gradient descent_, vooral bij grote datasets.\n",
-                "- Helpt lokale minima te vermijden: De _ruis_ die wordt geïntroduceerd door het gebruik van data samples kan het algoritme helpen om uit lokale minima te ontsnappen. De gradient is niet meer deterministisch; door de _shuffling_ kan er mogelijks een beter pad naar het globale minimum gevonden worden.\n",
+                "- Helpt lokale minima te vermijden: De _ruis_ die wordt geïntroduceerd door het gebruik van data samples kan het algoritme helpen om uit lokale minima te ontsnappen. De gradiënt is niet meer deterministisch; door de _shuffling_ kan er mogelijks een beter pad naar het globale minimum gevonden worden.\n",
                 "- Minder geheugen vereist: Omdat niet alle data tegelijk in het geheugen geladen hoeft te worden, is SGD geschikt voor zeer grote datasets.\n",
                 "- _Online learning_ mogelijk: SGD kan incrementeel leren van nieuwe data zonder de volledige dataset opnieuw te moeten verwerken."
             ]
