--- a/book/math_foundations/lineaire_regressie/monte_carlo.ipynb
+++ b/book/math_foundations/lineaire_regressie/monte_carlo.ipynb
@@ -1397,7 +1397,7 @@
             "id": "8da0f801",
             "metadata": {},
             "source": [
-                "De simpele Monte Carlo benadering levert duidelijk onstabiele resultaten op. In de volgende secties bekijken we betere alternatieven op basis van _calculus_. Daarvoor behandelen we eerst het concept van de **_gradient_ van de _loss_ functie**."
+                "De simpele Monte Carlo benadering levert duidelijk onstabiele resultaten op. In de volgende secties bekijken we betere alternatieven op basis van _calculus_. Daarvoor behandelen we eerst het concept van de **gradiënt van de _loss_ functie**."
             ]
         }
     ],
