--- a/book/math_foundations/lineaire_regressie/multiple.ipynb
+++ b/book/math_foundations/lineaire_regressie/multiple.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "be9478f6",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,6 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
-    "import torch\n",
     "from plotly.subplots import make_subplots\n",
     "from sklearn.preprocessing import StandardScaler"
    ]
@@ -1312,7 +1311,7 @@
     "\\pmb{b}^{k+1} = \\pmb{b}^k - \\lambda \\nabla J(\\pmb{b}^k)\n",
     "$$\n",
     "\n",
-    "Nog steeds gebruikmakend van de _SSE loss_, moeten we nu op zoek naar de gradient:\n",
+    "Nog steeds gebruikmakend van de _SSE loss_, moeten we nu op zoek naar de gradiënt:\n",
     "\n",
     "$$\n",
     "\\nabla{SSE} = \\begin{bmatrix}\n",
@@ -1323,7 +1322,7 @@
     "\\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "In de sectie over de _SSE gradient_ zagen we dat in het algemene geval van $N$ features, de gradient volgende vorm heeft:\n",
+    "In de sectie over de _SSE gradient_ zagen we dat in het algemene geval van $N$ features, de gradiënt volgende vorm heeft:\n",
     "\n",
     "$$\n",
     "\\nabla{SSE} = \\begin{bmatrix}\n",
@@ -1386,27 +1385,12 @@
       "Iteration    1: loss = 124.023166\n",
       "Iteration 1001: loss = 19.097274\n",
       "Iteration 2001: loss = 4.451616\n",
-      "Iteration 2001: loss = 4.451616\n",
-      "Iteration 3001: loss = 2.394629\n",
-      "Iteration 4001: loss = 2.103591\n",
       "Iteration 3001: loss = 2.394629\n",
       "Iteration 4001: loss = 2.103591\n",
       "Iteration 5001: loss = 2.062057\n",
       "Iteration 6001: loss = 2.056071\n",
-      "Iteration 5001: loss = 2.062057\n",
-      "Iteration 6001: loss = 2.056071\n",
       "Iteration 7001: loss = 2.055198\n",
       "Iteration 8001: loss = 2.055069\n",
-      "Iteration 7001: loss = 2.055198\n",
-      "Iteration 8001: loss = 2.055069\n",
-      "Iteration 9001: loss = 2.055050\n",
-      "Iteration 10000: loss = 2.055047\n",
-      "\n",
-      "Gradient descent coefficients:\n",
-      "  β1 (bias): \t\t0.000045\tols value: 0.000000\ttrue value: -0.012221\n",
-      "  β2 (Order Total): \t0.666576\tols value: 0.666591\ttrue value: 0.646223\n",
-      "  β3 (Age): \t\t0.636378\tols value: 0.636319\ttrue value: 0.635362\n",
-      "  β4 (Rain): \t\t-0.114291\tols value: -0.114367\ttrue value: -0.115728\n",
       "Iteration 9001: loss = 2.055050\n",
       "Iteration 10000: loss = 2.055047\n",
       "\n",
@@ -1451,7 +1435,7 @@
    "id": "281c5b73",
    "metadata": {},
    "source": [
-    ":::{info} Automatische gradients\n",
+    ":::{info} Automatische gradiënten\n",
     "Bij complexere _loss functies_ en modellen (bijvoorbeeld diepe neurale netwerken) kunnen we bij de implementatie gebruik maken van tools om automatische differentiatie te doen zoals `autograd` in PyTorch.\n",
     ":::"
    ]
