--- a/book/math_foundations/lineaire_regressie/grid.ipynb
+++ b/book/math_foundations/lineaire_regressie/grid.ipynb
@@ -455,7 +455,7 @@
                 "We kunnen in deze éénvoudige simulatie met 2 parameters ($b_1$ en $b_2$), de $SSE$ _loss_ functie voorstellen als een 3D oppervlak: $\\{x: b_1, y: b_2, z: SSE\\}$. We maken:\n",
                 "1. een _grid_ van $(b_1, b_2)$ coördinaten $(x, y)$,\n",
                 "2. berekenen de overeenkomstige $SSE$ (als $z$-coördinaat) en\n",
-                "3. gebruiken Plotly om de resulterende 3D coördinaten als een oppervlak af te beelden."
+                "3. stellen de resulterende 3D coördinaten voor als een oppervlak."
             ]
         },
         {
@@ -1443,6 +1443,7 @@
             "id": "55d1f194",
             "metadata": {},
             "source": [
+                ":::{info} Standaardisatie\n",
                 "De inspectie van het oppervlak is gevoelig aan de schaal van de variabelen. Het is algemeen (ook om wiskundige redenen) beter om onze variabelen te herschalen zodat hun gemiddelde $0$ is en hun **standaardafwijking** gelijk aan $1$. De **standaardafwijking is een belangrijke maat van spreiding rond het gemiddelde**. **Ze wordt berekend als de vierkantswortel van het gemiddelde van de gekwadrateerde verschillen ten opzicht van het gemiddelde**:\n",
                 "\n",
                 "$$\n",
@@ -1453,7 +1454,8 @@
                 "\n",
                 "$$\n",
                 "\\pmb{x}_s = \\frac{\\pmb{x}-\\overline{\\pmb{x}}}{sd_x}\n",
-                "$$"
+                "$$\n",
+                ":::"
             ]
         },
         {
@@ -3423,7 +3425,7 @@
             "metadata": {},
             "source": [
                 "## _Grid parameter search_\n",
-                "In de visualisatie is het coördinaat waar de $SSE$ het kleinst is in het groen aangeduid. Zeker in de geschaalde versie kan je zien dat de $SSE$ langs alle zijden van dit punt oploopt. Er is **één absoluut minimum en geen _lokale minima_**. Het minimum komt hier overeen met $b_1 = 0.615$ en $b_2 = 0.138$. Dit ligt in de buurt van onze simulatie parameters ($b_1 = 0.50$, $b_2 = 0.15$). De enige afwijking is te wijten aan onze keuze van _spacing_ in het _grid_. Deze _brute force_ **methode om aan de hand van een $N$-D _parameter grid_ het minimum van de _loss_ functie te zoeken** is op zich een leeralgoritme en wordt **grid search** genoemd.  \n",
+                "In de visualisatie is het coördinaat waar de $SSE$ het kleinst is in het groen aangeduid. Zeker in de geschaalde versie kan je zien dat de $SSE$ langs alle zijden van dit punt oploopt. Er is **één absoluut minimum en geen _lokale minima_**. Een oppervlak met dergelijke eigenschappen wordt een _convexe_ oppervlakte genoemd. Het minimum komt hier overeen met $b_1 = 0.615$ en $b_2 = 0.138$. Dit ligt in de buurt van onze simulatie parameters ($b_1 = 0.50$, $b_2 = 0.15$). De enige afwijking is te wijten aan onze keuze van _spacing_ in het _grid_. Deze _brute force_ **methode om aan de hand van een $N$-D _parameter grid_ het minimum van de _loss_ functie te zoeken** is op zich een leeralgoritme en wordt **grid search** genoemd.  \n",
                 "### Voordeel\n",
                 "Geen complexe wiskunde nodig.\n",
                 "### Nadeel\n",
