--- a/book/math_foundations/lineaire_regressie/ols.ipynb
+++ b/book/math_foundations/lineaire_regressie/ols.ipynb
@@ -184,9 +184,9 @@
                 "- Feature selectie: Verwijderen van redundante of _collinear features_.\n",
                 "- Dimensionaliteitsreductie: PCA of andere technieken.\n",
                 "- Pseudo-inverse: Het gebruik van de _Moore-Penrose pseudo-inverse_.\n",
-                "- Iteratieve methoden: **Gradient descent** vereist geen matrix inversie.  \n",
+                "- Iteratieve methoden: **_Gradient descent_** vereist geen matrix inversie.  \n",
                 "  \n",
-                "Dit is waarom _iteratieve_ gradient-gebaseerde optimalisatiemethoden vaak de voorkeur genieten in moderne machine learning, vooral voor modellen veel parameters.\n",
+                "Dit is waarom _iteratieve_ gradiënt-gebaseerde optimalisatiemethoden vaak de voorkeur genieten in moderne machine learning, vooral voor modellen veel parameters.\n",
                 "\n",
                 "Hieronder illustreren we de situatie bij $M < N$."
             ]
