--- a/book/math_foundations/lineaire_regressie/grid.ipynb
+++ b/book/math_foundations/lineaire_regressie/grid.ipynb
@@ -229,7 +229,7 @@
             "metadata": {},
             "source": [
                 ":::{important}\n",
-                "Zoals te zien is in de visualisatie, is er geen oplossing voor $\\pmb{b} = [b_1, b_2]^T$ die door alle punten loopt. Dit komt uiteraard door de aanwezigheid van de additieve error vector $\\pmb{e} \\neq \\pmb{0}$ in de simulatie. Mocht $\\pmb{e} = \\pmb{0}$ zijn, reduceert de lineaire regressie vergelijking tot $\\pmb{y} = \\pmb{X}\\pmb{b}$. Alle punten vallen dan op éénzelfde lijn en we vinden, zoals reeds gezien, de oplossing aan de hand van de matrix-inverse van $\\pmb{X}$:\n",
+                "Zoals te zien is in de visualisatie, is er geen oplossing voor $\\pmb{b} = [b_1, b_2]^T$ die door alle punten loopt. Dit komt door de aanwezigheid van de additieve error vector $\\pmb{e} \\neq \\pmb{0}$ in de simulatie. Mocht $\\pmb{e} = \\pmb{0}$ zijn, reduceert de lineaire regressie vergelijking tot $\\pmb{y} = \\pmb{X}\\pmb{b}$. Alle punten vallen dan op éénzelfde lijn en we kunnen alle vergelijkingen $y_i = b_1 + b_2x_i$ beschouwen als een stelsel van lineaire vergelijkingen waarvoor we de oplossing kunnen vinden aan de hand van de matrix-inverse van $\\pmb{X}$:\n",
                 "\n",
                 "$$\n",
                 "\\pmb{b} = \\pmb{X}^{-1}\\pmb{y}\n",
@@ -1443,7 +1443,7 @@
             "id": "55d1f194",
             "metadata": {},
             "source": [
-                ":::{info} Standaardisatie\n",
+                ":::{important} Standaardisatie\n",
                 "De inspectie van het oppervlak is gevoelig aan de schaal van de variabelen. Het is algemeen (ook om wiskundige redenen) beter om onze variabelen te herschalen zodat hun gemiddelde $0$ is en hun **standaardafwijking** gelijk aan $1$. De **standaardafwijking is een belangrijke maat van spreiding rond het gemiddelde**. **Ze wordt berekend als de vierkantswortel van het gemiddelde van de gekwadrateerde verschillen ten opzicht van het gemiddelde**:\n",
                 "\n",
                 "$$\n",
@@ -1455,12 +1455,59 @@
                 "$$\n",
                 "\\pmb{x}_s = \\frac{\\pmb{x}-\\overline{\\pmb{x}}}{sd_x}\n",
                 "$$\n",
+                ":::\n",
+                "\n",
+                ":::{note}\n",
+                ":class: dropdown\n",
+                "\n",
+                "Ter illustratie kan je hier zien hoe we de parameterwaarden voor $b_1$ en $b_2$ die we hebben gebruikt bij de simulatie moeten omvormen wanneer we $\\pmb{y}$ en $\\pmb{x}$ standaardiseren.\n",
+                "\n",
+                "Als\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "\\pmb{y}_s &= \\frac{\\pmb{y} - \\pmb{\\overline{y}}}{sd_{\\pmb{y}}} \\cr\n",
+                "\\pmb{x}_s &= \\frac{\\pmb{x}-\\overline{\\pmb{x}}}{sd_x}\n",
+                "\\end{align}\n",
+                "$$\n",
+                "\n",
+                "dan\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "\\pmb{y} &= \\pmb{y}_s sd_{\\pmb{y}} + \\pmb{\\overline{y}} \\cr\n",
+                "\\pmb{x} &= \\pmb{x}_s sd_{\\pmb{x}} + \\pmb{\\overline{x}}\n",
+                "\\end{align}\n",
+                "$$\n",
+                "\n",
+                "Als we dit in de oorspronkelijke regressievergelijking $\\pmb{y} = b_1 + b_2\\pmb{x} + \\pmb{e}$ invoegen, krijgen we:\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "\\pmb{y}_s sd_{\\pmb{y}} + \\pmb{\\overline{y}} &= b_1 + b_2 \\pmb{x}_s sd_{\\pmb{x}} + \\pmb{\\overline{x}} + \\pmb{e} \\cr\n",
+                "\\pmb{y}_s sd_{\\pmb{y}} &= b_1 + b_2 \\pmb{x}_s sd_{\\pmb{x}} + \\pmb{\\overline{x}} + \\pmb{e} - \\pmb{\\overline{y}} \\cr\n",
+                "\\pmb{y}_s sd_{\\pmb{y}} &= (b_1 - \\pmb{\\overline{y}} + \\pmb{\\overline{x}}) + (b_2 sd_{\\pmb{x}})\\pmb{x}_s  + \\pmb{e} \\cr\n",
+                "\\pmb{y}_s &= \\frac{(b_1 - \\pmb{\\overline{y}} + \\pmb{\\overline{x}})}{sd_{\\pmb{y}}} + \\frac{(b_2 sd_{\\pmb{x}})}{sd_{\\pmb{y}}}\\pmb{x}_s  + \\frac{\\pmb{e}}{sd_{\\pmb{y}}} \\cr\n",
+                "\\pmb{y}_s &= {b_1}_s + {b_2}_s\\pmb{x}_s  + \\pmb{e}_s\n",
+                "\\end{align}\n",
+                "$$\n",
+                "\n",
+                "met\n",
+                "\n",
+                "$$\n",
+                "\\begin{align}\n",
+                "{b_1}_s &= \\frac{(b_1 - \\pmb{\\overline{y}} + \\pmb{\\overline{x}})}{sd_{\\pmb{y}}} \\cr\n",
+                "{b_2}_s &= \\frac{(b_2 sd_{\\pmb{x}})}{sd_{\\pmb{y}}} \\cr\n",
+                "\\pmb{e}_s &= \\frac{\\pmb{e}}{sd_{\\pmb{y}}}\n",
+                "\\end{align}\n",
+                "$$\n",
+                "\n",
                 ":::"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 7,
+            "execution_count": null,
             "id": "87080aec",
             "metadata": {},
             "outputs": [],
