--- a/book/math_foundations/lineaire_regressie/multiple.ipynb
+++ b/book/math_foundations/lineaire_regressie/multiple.ipynb
@@ -1435,7 +1435,7 @@
    "id": "281c5b73",
    "metadata": {},
    "source": [
-    ":::{info} Automatische gradiënten\n",
+    ":::{note} Automatische gradiënten\n",
     "Bij complexere _loss functies_ en modellen (bijvoorbeeld diepe neurale netwerken) kunnen we bij de implementatie gebruik maken van tools om automatische differentiatie te doen zoals `autograd` in PyTorch.\n",
     ":::"
    ]
