--- a/book/math_foundations/linalg/basis_ops.ipynb
+++ b/book/math_foundations/linalg/basis_ops.ipynb
@@ -7,7 +7,12 @@
             "source": [
                 "# Element-gewijze operaties\n",
                 "Hier beschrijven we de basis operaties optellen/aftrekken en vermenigvuldigen/delen (producten) waarbij de operatie _element-gewijs_ wordt toegepast.\n",
-                "We zullen later zien dat producten tussen tensors speciale vormen kunnen aannemen. **Bij element-gewijze operaties tussen tensors impliceert dit dat de dimensionaliteit moet kloppen**. Denk aan lego blokken die op elkaar moeten passen.\n",
+                "We zullen later zien dat producten tussen tensors speciale vormen kunnen aannemen.\n",
+                "\n",
+                ":::{important}\n",
+                "Bij element-gewijze operaties tussen tensors impliceert dit dat de dimensionaliteit moet kloppen. Denk aan lego blokken die op elkaar moeten passen.\n",
+                ":::\n",
+                "\n",
                 "## Scalair optellen\n",
                 "$$\n",
                 "\\pmb{a} + b = \\begin{bmatrix}\n",
@@ -48,7 +53,7 @@
                 "\\end{bmatrix}\n",
                 "$$\n",
                 "\n",
-                "## Optellen\n",
+                "## Tensors optellen\n",
                 ":::{warning} $ $\n",
                 "Enkel bij passende dimensies.\n",
                 ":::\n",
