--- a/book/math_foundations/linalg/special_tensors.ipynb
+++ b/book/math_foundations/linalg/special_tensors.ipynb
@@ -15,7 +15,7 @@
             "source": [
                 "## Vierkante matrix\n",
                 "Een **vierkante matrix** is een matrix met evenveel rijen als kolommen. **Een matrix $\\pmb{V}_{m \\times n}$ is vierkant als en slechts als $m = n$**.\n",
-                "Geometrisch gezien, doen ze dienst als transformatoren van vectoren, meer bepaald om die te schalen, reflecteren en/of te roteren. Welke transformatie precies gebeurt, kan afgeleid worden van de zogenaamde **determinant**.\n",
+                "Geometrisch gezien, doen ze dienst als transformatoren van vectoren, meer bepaald om die te schalen, reflecteren en/of te roteren. Welke transformatie precies gebeurt, kan afgeleid worden van de zogenaamde _determinant_.\n",
                 "In het geval van een $2 \\times 2$ matrix (2D ruimte):\n",
                 "$$\n",
                 "\\pmb{A} = \\begin{bmatrix}\n",
@@ -53,7 +53,11 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [],
             "source": [
                 "import matplotlib.pyplot as plt\n",
@@ -63,7 +67,11 @@
         {
             "cell_type": "code",
             "execution_count": 7,
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -446,7 +454,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.18"
+            "version": "3.10.19"
         }
     },
     "nbformat": 4,
