--- a/book/math_foundations/linalg/tensors.ipynb
+++ b/book/math_foundations/linalg/tensors.ipynb
@@ -26,7 +26,7 @@
                 "\n",
                 "## Vectoren\n",
                 "**Een vector is een geordende reeks van getallen van éénzelfde type**. Ieder individueel getal wordt geïdentificeerd door de _index_ binnen de ordening (startend bij $1$).\n",
-                "**Een vector duiden we in kleine letters en in het vet aan**, bv. $\\pmb{x}$. Het eerste element duiden we aan met $x_1$, het laatste met $x_n$. Wanneer we de elementen expliciet willen voorstellen,\n",
+                "Een vector duiden we in kleine letters en in het vet aan, bv. $\\pmb{x}$. Het eerste element duiden we aan met $x_1$, het laatste met $x_n$. Wanneer we de elementen expliciet willen voorstellen,\n",
                 "gebruiken we een kolom met vierkante haakjes: \n",
                 "$$\n",
                 "\\pmb{x} = \\begin{bmatrix}\n",
@@ -101,14 +101,18 @@
             "id": "3c79a1c0",
             "metadata": {},
             "source": [
-                "**We kunnen vectoren zien als de coordinaten van individuele punten in een $n$-dimensionele ruimte.**"
+                "We kunnen vectoren zien als de coördinaten van individuele punten in een $n$-dimensionele ruimte."
             ]
         },
         {
             "cell_type": "code",
             "execution_count": 4,
             "id": "vector_3d_viz",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -1145,7 +1149,7 @@
             "source": [
                 "## Matrices\n",
                 "Wanneer we bijvoorbeeld niet 1 maar $m$ punten in een $n$ dimensionale ruimte willen weergeven, kunnen we een **matrix** notatie gebruiken: $\\pmb{X} \\isin \\mathbb{R}^{mxn}$.\n",
-                "**Een matrix is een geordende reeks van vectoren**. **We duiden ze aan in het vet met een hoofdletter**, bv $\\pmb{X}$. Voor individuele elementen gebruiken we gewone hoofdletters, bv. $X_{2,4}$ \n",
+                "**Een matrix is een geordende reeks van vectoren**. We duiden ze aan in het vet met een hoofdletter, bv $\\pmb{X}$. Voor individuele elementen gebruiken we gewone hoofdletters, bv. $X_{2,4}$ \n",
                 "$$\n",
                 "\\pmb{X} = \\begin{bmatrix}\n",
                 "X_{1,1} & \\ldots & X_{1,j} & \\ldots & X_{1,n} \\cr\n",
@@ -1280,7 +1284,7 @@
             "metadata": {},
             "source": [
                 "We kunnen dit illustreren aan de hand van beeld-data. Een RGB-afbeelding bestaat uit een verzameling pixels die geordend zijn in een 2-dimensionale _grid_.\n",
-                "De dimensies worden bepaald door de resolutie; het aantal horizontale en verticale pixels. Iedere pixel is een vector met 3 waarden, overeenkomstig de _channels_: **R**ood, **G**roen, **B**lauw.\n",
+                "De dimensies worden bepaald door de resolutie; het aantal horizontale en verticale pixels. Iedere pixel is een vector met 3 waarden, overeenkomstig de _channels_: Rood, Groen, Blauw.\n",
                 "Het gaat hier dus over een 3D tensor. De waarden zitten in een raster met een _blok_ vorm (en dus niet in een _vlak_ raster zoals bij matrices)."
             ]
         },
@@ -1288,7 +1292,11 @@
             "cell_type": "code",
             "execution_count": 5,
             "id": "9ea87774",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "input-hide"
+                ]
+            },
             "outputs": [],
             "source": [
                 "import matplotlib.pyplot as plt\n",
@@ -1471,7 +1479,7 @@
             "metadata": {},
             "source": [
                 ":::{tip}\n",
-                "We hebben tot nu toe een 3D tensor met op het niveau van de pixels, vectoren met 3 elementen. Als we de afbeelding omzetten van RGB naar **C**yan, **M**agenta, **Y**ellow, **K**ey krijgen we pixels met 4 elementen.\n",
+                "We hebben tot nu toe een 3D tensor met op het niveau van de pixels, vectoren met 3 elementen. Als we de afbeelding omzetten van RGB naar Cyan, Magenta, Yellow, Key krijgen we pixels met 4 elementen.\n",
                 ":::"
             ]
         },
@@ -1513,7 +1521,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.18"
+            "version": "3.10.19"
         }
     },
     "nbformat": 4,
