--- a/book/math_foundations/linalg/why_tensors.ipynb
+++ b/book/math_foundations/linalg/why_tensors.ipynb
@@ -8,7 +8,7 @@
                 "# Waarom vectoren, matrices en tensors?\n",
                 "Oorspronkelijk werden vectoren in de meetkunde en de mechanica geïntroduceerd om grootheden voor te stellen die zowel een grootte als een richting hebben, zoals verplaatsingen, krachten, versnelling, enz.\n",
                 "In dezelfde context werden matrices gebruikt om lineaire transformaties tussen vector-ruimtes voor te stellen.\n",
-                "**In Machine Learning worden vectoren, matrices en tensors veel algemener gebruikt als _containers_ voor data en model parameters** omwille van:\n",
+                "In Machine Learning worden vectoren, matrices en tensors veel algemener gebruikt als _containers_ voor data en model parameters omwille van:\n",
                 "- computationele efficiëntie\n",
                 "- speciale tensors en tensor-operaties (bv. rotatie-matrices, convolutionele filters, decompositie, enz.)\n",
                 "- compacte notatie (zowel in tekst als programmacode)"
@@ -22,14 +22,18 @@
                 "## Toepassingen[^NotExhaustive]\n",
                 "[^NotExhaustive]: Dit zijn voorbeelden, dus niet als een exhaustieve lijst te beschouwen.\n",
                 "### Feature matrix voor _tabelgegevens_\n",
-                "In veel gevallen vertrekken we van data in een **tabel formaat** (denk aan een Excel sheet) waarbij iedere cel voor een bepaalde eigenschap staat (bv. lengte, leeftijd) van een bepaald item (bv. student). Verschillende items komen overeen met $m$ verschillende rijen en verschillende eigenschappen met $n$ verschillende kolommen."
+                "In veel gevallen vertrekken we van data in een tabel formaat (denk aan een Excel sheet) waarbij iedere cel voor een bepaalde eigenschap staat (bv. lengte, leeftijd) van een bepaald item (bv. student). Verschillende items komen overeen met $m$ verschillende rijen en verschillende eigenschappen met $n$ verschillende kolommen."
             ]
         },
         {
             "cell_type": "code",
             "execution_count": 38,
             "id": "2db8458c",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [],
             "source": [
                 "import os\n",
@@ -68,7 +72,7 @@
             "metadata": {},
             "source": [
                 "\n",
-                "Machine Learning is een zaak van wiskunde en daarom moet **alle informatie waarin we patronen willen herkennen vertaald worden naar numerieke waarden**. Bij tabelgegevens hebben we doorgaans te maken met heel verschillende data-types. Voor sommige data types is de vertaling in numerieke waarden evident, zoals temperatuur of aandelenkoersen, maar in andere gevallen zijn er speciale voorbereidingen nodig. **De manier waarop we informatie vertalen naar numerieke waarden bepaalt heel sterk welke patronen we al dan _niet_ kunnen oppikken met het ML model**. Het is _onder andere_ belangrijk om rekening te houden met volgende aspecten:\n",
+                "Machine Learning is een zaak van wiskunde en daarom moet **alle informatie waarin we patronen willen herkennen vertaald worden naar numerieke waarden**. Bij tabelgegevens hebben we doorgaans te maken met heel verschillende data-types. Voor sommige data types is de vertaling in numerieke waarden evident, zoals temperatuur of aandelenkoersen, maar in andere gevallen zijn er speciale voorbereidingen nodig. _De manier waarop we informatie vertalen naar numerieke waarden bepaalt heel sterk welke patronen we al dan _niet_ kunnen oppikken met het ML model_. Het is onder andere belangrijk om rekening te houden met volgende aspecten:\n",
                 "- **Meetschaal**\n",
                 "- **Niet-lineariteit**\n",
                 "- **Cyclische informatie**\n",
@@ -113,7 +117,8 @@
             "metadata": {},
             "source": [
                 "#### Niet-lineariteit\n",
-                "Op een interval of ratio schaal kunnen we aan de hand van niet lineaire transformaties hetzelfde interval een ander gewicht geven naargelang de positie op de schaal. Voorbeelden zijn logarithmische transformatie, exponentiële transformatie en polynomiale transformatie.\n",
+                "Op een interval of ratio schaal kunnen we aan de hand van niet lineaire transformaties hetzelfde interval een ander gewicht geven naargelang de positie op de schaal. Voorbeelden zijn logarithmische transformatie, exponentiële transformatie en polynomiale transformatie.  \n",
+                "  \n",
                 ":::{note} 🌍 Likes\n",
                 ":icon: false\n",
                 ":class: simple\n",
@@ -134,7 +139,11 @@
             "cell_type": "code",
             "execution_count": 40,
             "id": "0a4236ba",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [],
             "source": [
                 "import matplotlib.pyplot as plt\n",
@@ -147,7 +156,11 @@
             "cell_type": "code",
             "execution_count": 41,
             "id": "fba63f7c",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -274,7 +287,11 @@
             "cell_type": "code",
             "execution_count": 42,
             "id": "57490a00",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "name": "stdout",
@@ -513,7 +530,7 @@
             "id": "da53b83a",
             "metadata": {},
             "source": [
-                "**Eens we de informatie waarin we patroonherkenning willen doen vertaald hebben naar numerieke waarden, verzamelen we ze in een _feature matrix/tensor_ met items in de rijen en verschillende features in de kolommen**."
+                "Eens we de informatie waarin we patroonherkenning willen doen vertaald hebben naar numerieke waarden, verzamelen we ze in een _feature matrix/tensor_ met items in de rijen en verschillende features in de kolommen."
             ]
         },
         {
@@ -549,7 +566,11 @@
             "cell_type": "code",
             "execution_count": 46,
             "id": "715e1cac",
-            "metadata": {},
+            "metadata": {
+                "tags": [
+                    "hide-input"
+                ]
+            },
             "outputs": [
                 {
                     "data": {
@@ -628,7 +649,7 @@
             "name": "python",
             "nbconvert_exporter": "python",
             "pygments_lexer": "ipython3",
-            "version": "3.10.18"
+            "version": "3.10.19"
         }
     },
     "nbformat": 4,
