--- a/book/ml_principles/basis/ml.ipynb
+++ b/book/ml_principles/basis/ml.ipynb
@@ -16,7 +16,7 @@
                 "We kunnen dit *zonder ingebouwde machine learning* oplossen door een vaste temperatuur te hard-coden in het productieproces. Dit heeft als voordeel dat er geen user-interface nodig is, maar er zullen flink wat gebruikers ontevreden zijn omwille van persoonlijke temperatuursensaties.\n",
                 "We kunnen, nog steeds *zonder ingebouwde machine learning*, tegemoet komen aan persoonlijke voorkeuren door gebruikers via een UI op ieder moment de mogelijkheid te geven een temperatuur te kiezen.  \n",
                 "  \n",
-                "Met machine learning kunnen we, *nadat gebruikers op voldoende momenten een voorkeur hebben ingegeven*, uit de ingegeven voorkeuren trachten te voorspellen wat het best moment is om de waarde van $\\beta$ *autonoom* aan te passen en wat de beste waarden dan is. Als we daarin slagen, zal het gebruiksgemak uiteraard nog groter zijn.  \n",
+                "Met machine learning kunnen we, *nadat gebruikers op voldoende momenten een voorkeur hebben ingegeven*, uit de ingegeven voorkeuren trachten te voorspellen wat het beste moment is om de waarde van $\\beta$ *autonoom* aan te passen en wat de beste waarden dan is. Als we daarin slagen, zal het gebruiksgemak uiteraard nog groter zijn.  \n",
                 "  \n",
                 "De bedoeling is om dus patronen in de voorkeuren wat betreft $\\beta$ te ontdekken en die patronen te gebruiken om de waarde van $\\beta$ op het volgende (discrete) tijdstip te bepalen.\n",
                 ":::\n",
